# copy_to

./: .cp2ignore  .env.example  README.md  pyproject.toml
docs/: config.md
src/cp2/: choose_files.py  cli.py  cp2_config.py  fuzzy_search.py  interactive.py  interactive_fzf.py  load_env.py  load_files.py  main.py
