[project]
name = "copy-to"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "platformdirs>=4.3.8",
    "questionary>=2.1.0",
    "rich>=14.0.0",
    "toml>=0.10.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
cp2 = "cp2.main:main"
